# tic-tac-toe

./: .gitignore  CMakeLists.txt
include/: button.h  clickable.h  gamestate.h  global.h  intro_state.h  main_state.h  renderer.h  shape.h  sprite.h  texture.h  window.h
src/: .clangd  gamestate.cpp  global.cpp  intro_state.cpp  main.cpp  main_state.cpp  renderer.cpp  sprite.cpp  texture.cpp  window.cpp
